# AI_Software_Factory

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TREE.txt  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
config/: asf_project_profiles.json
docs/: 00_PROJECT_CONTEXT.md  01_VISION.md  02_PRODUCT_STRATEGY.md  03_ARCHITECTURE.md  04_WORKFLOW.md  0560-01-Report_OpenAI_API_Adapter_First_Authorized_Live_Run.md  0560-03-Diagnostic_OpenAI_Provider_HTTP_Error_And_Rate_Limit.md  05_SECURITY_MODEL.md  06_API_DESIGN.md  07_MCP_STRATEGY.md  08_CODEX_WORKFLOW.md  09_TEST_STRATEGY.md  10_ROADMAP.md  11_DECISIONS.md  12_CASE_STUDY_FAMILY_PHOTO_ORGANIZER.md  13_SAAS_EVOLUTION.md  14_REPOSITORY_GENESIS.md  15_GITHUB_WORKFLOW.md  16_APPROVAL_POLICY.md  17_TOOL_RISK_CLASSIFICATION.md  18_ROLLBACK_STRATEGY.md  19_PROMPT_PACKET_GENERATOR.md  20_VERIFICATION_GATE.md  21_DOCUMENTATION_SYNC.md  22_BRANCH_PROTECTION_POLICY.md  23_BRANCH_PROTECTION_IMPLEMENTATION.md  24_SOFT_PROTECTION_GUARDRAILS.md  25_PROMPT_PACKET_HARDENING.md  26_PROMPT_PACKET_VALIDATION_LITE.md  27_PROMPT_PACKET_GOLDEN_SAMPLES.md  28_PROMPT_PACKET_VALIDATION_STRICT_MODE.md  29_PROMPT_PACKET_GENERATOR_CLI_HARDENING.md  30_PROMPT_PACKET_GENERATOR_PACKAGING.md  31_PROMPT_PACKET_GENERATOR_RELEASE_SMOKE_WORKFLOW.md  32_PROMPT_PACKET_LIFECYCLE_CHECKLIST.md  33_PROMPT_PACKET_GENERATOR_DEVELOPER_ONBOARDING.md  34_PROJECT_WORKFLOW_INDEX.md  35_WORKFLOW_HEALTH_CHECK.md  36_WORKFLOW_QUICK_REFERENCE.md  (+38 more)
(+488 files in other folders)
