[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-software-factory"
version = "0.3.0"
description = "Local-first, SaaS-ready framework for human-guided AI-assisted software engineering."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Alberto Ferrari" }
]
license = { text = "Proprietary / License Not Selected" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
